tests/fixtures/invalid/str_add_bytes.py
# Cannot add Str and Bytes
x: str = "hello" + b"hello"
